--- a/tutorial/demo_scale.ipynb
+++ b/tutorial/demo_scale.ipynb
@@ -395,7 +395,7 @@
    "id": "d2827122",
    "metadata": {},
    "source": [
-    "## Get the predicted label"
+    "## Get the predicted labels"
    ]
   },
   {
