--- a/tutorial/demo.ipynb
+++ b/tutorial/demo.ipynb
@@ -5,7 +5,7 @@
    "id": "16300a7c",
    "metadata": {},
    "source": [
-    "In this demo, we will perform scMTO cluster analysis using the Qx_Spleen]."
+    "In this demo, we will perform scMTO cluster analysis using the Qx_Spleen."
    ]
   },
   {
